kubernetes/istio/grafana-destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana
  namespace: istio-system
spec:
  host: "grafana.istio-system.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
