kubernetes/istio/grafana-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - public-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /grafana
  - route:
    - destination:
        host: flagger-grafana
        port:
          number: 80
